--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
   "version": 2,
   "routes": [{ "src": "/(.*)", "dest": "/" }]
+   "builds": [
+    { "src": "*.js", "use": "@vercel/node" }
+  ]
 }
